[gd_scene load_steps=4 format=3 uid="uid://jjvqwipon87p"]

[ext_resource type="Script" path="res://NavigationOnly/Scripts/EditAndPlayController.gd" id="1_jfcxj"]
[ext_resource type="PackedScene" uid="uid://dvhejcy7y42k7" path="res://NavigationOnly/Scenes/MapEditor.tscn" id="2_2p2rb"]
[ext_resource type="PackedScene" uid="uid://dmrtadmcd1swc" path="res://NavigationOnly/Scenes/MapPlayer.tscn" id="3_jfl0p"]

[node name="EditAndPlayMaps" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfcxj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HeaderContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
editor_description = "this might make more sense as separate headers, one for editing, one for playing. Less state to manage."
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HeaderContainer/MarginContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="VBoxContainer/MarginContainer/HeaderContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Editing"

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainer/HeaderContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Play Map"

[node name="StopButton" type="Button" parent="VBoxContainer/MarginContainer/HeaderContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
disabled = true
text = "Stop"

[node name="BodyMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MapEditor" parent="VBoxContainer/BodyMarginContainer" instance=ExtResource("2_2p2rb")]
unique_name_in_owner = true
layout_mode = 2

[node name="MapPlayer" parent="VBoxContainer/BodyMarginContainer" instance=ExtResource("3_jfl0p")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer/HeaderContainer/MarginContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
